@@ -404,9 +404,11 @@
             <properties>
                 <!-- Required JVM args for Java 11 -> 16 -->
                 <jvm.requiredArgs>
-                    --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
-                    --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
-                    --add-exports java.base/sun.nio.ch=ALL-UNNAMED
+                                --illegal-access=permit
+                                --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
+                                --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
+                                --add-exports java.base/jdk.internal.util=ALL-UNNAMED
+                                --add-exports java.base/sun.nio.ch=ALL-UNNAMED
                 </jvm.requiredArgs>
             </properties>
         </profile>
@@ -418,7 +420,8 @@
             <properties>
                 <!-- Required JVM args for Java 17+ -->
                 <jvm.requiredArgs>
-                    --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
+                    --illegal-access=permit
+                                --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
                     --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
                     --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
                     --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
@@ -427,7 +430,9 @@
                     --add-opens=java.base/java.lang=ALL-UNNAMED
                     --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
                     --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED
-                </jvm.requiredArgs>
+                                --add-exports java.base/jdk.internal.util=ALL-UNNAMED
+                                --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
+                            </jvm.requiredArgs>
             </properties>
         </profile>
         <!--
